force-app/main/default/objects/pdffiller_sfree__airSlate_Button__c/pdffiller_sfree__airSlate_Button__c.object-meta.xml
<CustomObject>
    <label>airSlate Button</label>
    <nameField>
        <displayFormat>ASB-{000000}</displayFormat>
        <label>airSlate Button Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>airSlate Buttons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>