force-app/main/default/objects/pdffiller_sfree__airSlate_Button__c/fields/pdffiller_sfree__IsActive__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>