force-app/main/default/objects/pdffiller_sfree__airSlate_Button__c/fields/pdffiller_sfree__Name__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>